@@ -7,5 +7,6 @@ require('scripts/inventorysort')
 require('scripts/chestlimit')
 require('scripts/auto-trash-fix')
 require('scripts/auto-stock')
+require('scripts/item-count')
 
 remote.add_interface(script.mod_name, require('__stdlib__/stdlib/scripts/interface'))
