@@ -6,11 +6,13 @@ PickerInventoryTools=Fast Filter Fill, Fast Requests, Chest Contents Cut/paste, 
 
 [mod-setting-name]
 picker-auto-sort-inventory=Automatically Sort Chests
+picker-item-count=Show Item Counts
 picker-fix-trash-filters=Sync Trash Filters and Logistics
 picker-auto-stock=Auto Stock from Trash Filters
 
 [mod-setting-description]
 picker-auto-sort-inventory=Automatically sort container inventories.
+picker-item-count=Enable or disable displaying the total item count of what is in your hand.
 picker-fix-trash-filters=Sync trash filters with logistics when inventory is opened.
 picker-auto-stock=Auto stock from trash.
 
